Fix deprecated use of URL().openStream()